# baremetal-os

./: .gitignore  Cargo.toml  x86_64_baremetal_uefi.json  x86_64_unknown_linux-gnu.json
.cargo/: config.toml
src/: interrupts.rs  lib.rs  main.rs  vga_buffer.rs
src/kernel/: interrupts.rs  lib.rs  mod.rs  vga_driver.rs
